Add CSS part 1 and a half

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       <div id="shuffle">
         <h3>Oh no there's too much choice...</h3>
         <div class="theme-box">
-          <button id="shuffle-btn" class="theme-btn">Surprise me! <br> Shuffle themes</button>
+          <button id="shuffle-btn" class="theme-btn">Surprise me! <br> <i class="fas fa-random"></i> Shuffle themes</button>
         </div>
       </div>
       
       <div id="mixed-themes">
         <h3>All categories</h3>
         <div class="theme-box">
-          <button class="theme-btn">All categories</button>
+          <button class="theme-btn"><i class="fas fa-asterisk"></i> All categories</button>
           <div class="level-box">
             <button class="difficulty" data-level="easy">Easy</button>
             <button class="difficulty" data-level="medium">Medium</button>
@@ -42,7 +42,7 @@
 
     <div id="themes">
       <div class="theme-box">
-        <button class="theme-btn" data-category="9">General knowledge</button>
+        <button class="theme-btn" data-category="9"><i class="fas fa-brain"></i> General knowledge</button>
         <div class="level-box">
           <button class="difficulty" data-category="9" data-level="easy">Easy</button>
           <button class="difficulty" data-category="9" data-level="medium">Medium</button>
@@ -51,7 +51,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="10" >Entertainment: Books</button>
+        <button class="theme-btn" data-category="10" ><i class="fas fa-book"></i> Entertainment: Books</button>
         <div class="level-box">
           <button class="difficulty" data-category="10" data-level="easy">Easy</button>
           <button class="difficulty" data-category="10" data-level="medium">Medium</button>
@@ -60,7 +60,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="11">Entertainment: Film</button>
+        <button class="theme-btn" data-category="11"><i class="fas fa-film"></i> Entertainment: Film</button>
         <div class="level-box">
           <button class="difficulty" data-category="11" data-level="easy">Easy</button>
           <button class="difficulty" data-category="11" data-level="medium">Medium</button>
@@ -69,7 +69,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="12">Entertainment: Music</button>
+        <button class="theme-btn" data-category="12"><i class="fas fa-music"></i> Entertainment: Music</button>
         <div class="level-box">
           <button class="difficulty" data-category="12" data-level="easy">Easy</button>
           <button class="difficulty" data-category="12" data-level="medium">Medium</button>
@@ -78,7 +78,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="13">Entertainment: Musical & theatres</button>
+        <button class="theme-btn" data-category="13"><i class="fas fa-theater-masks"></i> Entertainment: Musical & theatres</button>
         <div class="level-box">
           <button class="difficulty" data-category="13" data-level="easy">Easy</button>
           <button class="difficulty" data-category="13" data-level="medium">Medium</button>
@@ -87,7 +87,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="14">Entertainment: Television</button>
+        <button class="theme-btn" data-category="14"><i class="fas fa-tv"></i> Entertainment: Television</button>
         <div class="level-box">
           <button class="difficulty" data-category="14" data-level="easy">Easy</button>
           <button class="difficulty" data-category="14" data-level="medium">Medium</button>
@@ -96,7 +96,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="15">Entertainment: Video games</button>
+        <button class="theme-btn" data-category="15"><i class="fas fa-gamepad"></i> Entertainment: Video games</button>
         <div class="level-box">
           <button class="difficulty" data-category="15" data-level="easy">Easy</button>
           <button class="difficulty" data-category="15" data-level="medium">Medium</button>
@@ -105,7 +105,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="16">Entertainment: Board games</button>
+        <button class="theme-btn" data-category="16"><i class="fas fa-dice"></i> Entertainment: Board games</button>
         <div class="level-box">
           <button class="difficulty" data-category="16" data-level="easy">Easy</button>
           <button class="difficulty" data-category="16" data-level="medium">Medium</button>
@@ -114,7 +114,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="17">Science & nature</button>
+        <button class="theme-btn" data-category="17"><i class="fas fa-flask"></i> Science & nature</button>
         <div class="level-box">
           <button class="difficulty" data-category="17" data-level="easy">Easy</button>
           <button class="difficulty" data-category="17" data-level="medium">Medium</button>
@@ -123,7 +123,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="18">Science: Computers </button>
+        <button class="theme-btn" data-category="18"><i class="fas fa-laptop"></i> Science: Computers </button>
         <div class="level-box">
           <button class="difficulty" data-category="18" data-level="easy">Easy</button>
           <button class="difficulty" data-category="18" data-level="medium">Medium</button>
@@ -132,7 +132,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="20">Mythology</button>
+        <button class="theme-btn" data-category="20"><i class="fas fa-dragon"></i> Mythology</button>
         <div class="level-box">
           <button class="difficulty" data-category="20" data-level="easy">Easy</button>
           <button class="difficulty" data-category="20" data-level="medium">Medium</button>
@@ -141,7 +141,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="22">Geography</button>
+        <button class="theme-btn" data-category="22"><i class="fas fa-globe-europe"></i> Geography</button>
         <div class="level-box">
           <button class="difficulty" data-category="22" data-level="easy">Easy</button>
           <button class="difficulty" data-category="22" data-level="medium">Medium</button>
@@ -150,7 +150,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="23">History</button>
+        <button class="theme-btn" data-category="23"><i class="far fa-hourglass"></i> History</button>
         <div class="level-box">
           <button class="difficulty" data-category="23" data-level="easy">Easy</button>
           <button class="difficulty" data-category="23" data-level="medium">Medium</button>
@@ -159,7 +159,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="25">Art</button>
+        <button class="theme-btn" data-category="25"><i class="fas fa-palette"></i> Art</button>
         <div class="level-box">
           <button class="difficulty" data-category="25" data-level="easy">Easy</button>
           <button class="difficulty" data-category="25" data-level="medium">Medium</button>
@@ -168,7 +168,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="27">Animals</button>
+        <button class="theme-btn" data-category="27"><i class="fas fa-paw"></i> Animals</button>
         <div class="level-box">
           <button class="difficulty" data-category="27" data-level="easy">Easy</button>
           <button class="difficulty" data-category="27" data-level="medium">Medium</button>
@@ -177,7 +177,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="29">Entertainment: Comics</button>
+        <button class="theme-btn" data-category="29"><i class="fas fa-journal-whills"></i> Entertainment: Comics</button>
         <div class="level-box">
           <button class="difficulty" data-category="29" data-level="easy">Easy</button>
           <button class="difficulty" data-category="29" data-level="medium">Medium</button>
@@ -186,7 +186,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="31">Entertainment: Japanese anime & manga</button>
+        <button class="theme-btn" data-category="31"><i class="fas fa-book-dead"></i> Entertainment: Japanese anime & manga</button>
         <div class="level-box">
           <button class="difficulty" data-category="31" data-level="easy">Easy</button>
           <button class="difficulty" data-category="31" data-level="medium">Medium</button>
@@ -195,7 +195,7 @@
       </div>
 
       <div class="theme-box">
-        <button class="theme-btn" data-category="32">Entertainment: Cartoon & animation</button>
+        <button class="theme-btn" data-category="32"><i class="fas fa-mask"></i> Entertainment: Cartoon & animation</button>
         <div class="level-box">
           <button class="difficulty" data-category="32" data-level="easy">Easy</button>
           <button class="difficulty" data-category="32" data-level="medium">Medium</button>
