Responsive design DONE

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Trivia game (I'm trying to find a pun but right now I have nothing)</h1>
   <div id="home-container">
-    <p id="intro">Welcome! Are you feeling the need to answer all questions in the world and get smarter and/or more cultivated? Well you're at the right place, look at all those quizzes ready for you!</p>
+    <p id="intro">Welcome! Are you feeling the need to answer all questions in the world and get smarter and/or more cultivated? <br> Well you're at the right place, look at all those quizzes ready for you!</p>
 
     <hr>
 
